# azure_driver

./: .gitignore  .gitreview  README.md  cinder-test-requirements.txt  cinder_requirements.txt  nova-test-requirements.txt  nova_requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cinder/backup/drivers/: azure_backup.py
cinder/tests/unit/backup/drivers/: test_backup_azure.py
cinder/tests/unit/volume/drivers/azure/: test_adapter.py  test_driver.py  test_vhd_utils.py
cinder/volume/drivers/azure/: README.md  adapter.py  cinder-volume.conf  driver.py  requirements.txt  utils.py  vhd_utils.py  volume.conf
doc/: FlowChart-Spawn.md  azure_account_prepare.md  compute_driver.md  compute_driver_design.md  coverage_report.txt  jacket_driver.md  libcloud_vs_azure_sdk.md  progress_1110.md  progress_1114.md  servers_api(11_22).md  servers_api(1_5).md  servers_api(6_10).md  volume_driver.md  volume_driver_design.md
etc/cinder/: README.md
etc/nova/: README.md
nova/tests/unit/virt/azureapi/: test_adapter.py  test_conf.py  test_driver.py
nova/virt/azureapi/: README.md  __init__.py  adapter.py  constant.py  driver.py  exception.py  nova-compute.conf  requirements.txt  vmutils.py
nova/virt/azureapi/conf/: azureapi.py
