[metadata]
name = azure-driver
version = 0.1
summary = OpenStack driver for azure cloud
description-file =
    README.md

author = Huawei
home-page = http://www.huawei.com

[files]
packages =
    nova

[entry_points]
nova.ipv6_backend =
    rfc2462 = nova.ipv6.rfc2462
    account_identifier = nova.ipv6.account_identifier

cinder.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration